--- a/.verb.md
+++ b/.verb.md
@@ -1,5 +1,41 @@
 ## Usage
 
-```js
-var {%= alias %} = require('{%= name %}');
+### CLI
+
+When installed globally, the `backup` generator is available to use through the `gen` command:
+
+Backup a folder to a tar file using the [default](#default) task.
+
+```sh
+$ gen backup --src my-project --dest /backups/my-project
 ```
+
+Extract a tar file to a folder using the [extract](#extract) task.
+
+```sh
+$ gen backup:extract --src /backups/my-project/2017-01-02.tar --dest my-project-2
+```
+### API
+
+**Params**
+
+* `app` **{Object}**: [generate](https://github.com/generate/generate) instance to add tasks to.
+
+**Example**
+
+```js
+// use as a plugin with existing generate instance
+// $ gen backup
+app.use(require('generate-backup'));
+
+// use as a subgenerator on an existing generate instance
+// $ gen bkp
+app.register('bkp', require('generate-backup'));
+```
+
+
+### Internal API
+
+Internal functions that are used inside the tasks to provide [backup](#backup) and [extract](#extract) functionality.
+
+{%= apidocs('lib/*.js') %}
